syntax = "proto2";

package helloworld;

service HelloWorld {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the name field.
message HelloRequest {
  required string name = 1;
}

// The response message containing the message field.
message HelloReply {
  required string message = 1;
}
